синхронизация чартов под zscore